--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon app/index.js",
     "start": "node app/index.js",
     "pm2_add": "pm2 start app/index.js  --name \"bot-AppCivico\"",
-    "restart": "pm2 restart \"bot-AppCivico\"",
+    "restart": "pm2 restart \"bot-AppCivico\" --update-env",
     "logs": "pm2 logs \"bot-AppCivico\" --lines 1000"
   },
   "dependencies": {
