--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node app/index.js",
     "pm2_add": "pm2 start app/index.js  --name \"bot-AppCivico\"",
     "restart": "pm2 restart \"bot-AppCivico\" --update-env",
-    "logs": "pm2 logs \"bot-AppCivico\" --lines 1000"
+    "logs": "pm2 logs \"bot-AppCivico\" --lines 1000",
+    "reload": "docker rm -f bot_appcivico; bash build-container.sh; bash run-container.sh",
+    "d_logs": "docker logs -f --tail 1000 bot_appcivico"
   },
   "dependencies": {
     "@sentry/node": "^4.2.3",
