--- a/example.env
+++ b/example.env
@@ -11,9 +11,10 @@ PAGE=
 APP=
 MA_USER=
 
-
 VERIFY_TOKEN=
 ASSISTENTE_API_URL=
 SECURITY_TOKEN_MA=
 GOOGLE_PROJECT_ID=
 GOOGLE_APPLICATION_CREDENTIALS=
+
+FACEBOOK_SERVER_VERIFY=
